# deep-research-sandbox

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: code-architect.md  code-explorer.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/deep_research_api/: __init__.py  config.py  dependencies.py  main.py
apps/api/deep_research_api/api/: __init__.py  health.py  research.py  router.py
apps/api/deep_research_api/models/: __init__.py  database.py  research.py
apps/api/deep_research_api/services/: __init__.py  database.py
evals/: pyproject.toml
infra/supabase/: seed.sql  types.sql
infra/supabase/migrations/: 001_initial_schema.sql  002_add_indexes.sql
scripts/: generate_types.py
tests/: conftest.py
tests/unit/: test_shared_types.py
tests/unit/api/: test_config.py  test_health.py  test_research.py
