[project]
name = "deep-research-sandbox"
version = "0.1.0"
description = "Deep Research Agent - Multi-step iterative research with reasoning traces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/shared/python",
    "evals",
]

[tool.uv.sources]
deep-research-shared = { workspace = true }
deep-research-api = { workspace = true }
deep-research-evals = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["deep_research_api", "deep_research_shared", "deep_research_evals"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "apps/api/deep_research_api:packages/shared/python/deep_research_shared:evals"
