[project]
name = "deep-research-evals"
version = "0.1.0"
description = "Evaluation suite for Deep Research Agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "openai>=1.58.0",
    "deep-research-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "metrics",
    "datasets",
    "judges",
    "runners",
    "generators",
]
